--- a/index.html
+++ b/index.html
@@ -45,20 +45,47 @@
         
 
         <section class="flex justify-center items-center">
-            <div id="btn-container" class="mt-12 space-x-4 ml-24">
+            <div id="btn-container" class="mt-12 space-x-4">
 
             </div>
         </section>
 
     </header>
     <main>
-        <section class="mt-12 hidden">
-            <div id="error-element" class="mt-24"> 
+
+
+
+        <section class="mt-12">
+            <div id="error-element" class="mt-24 hidden"> 
                 <img src="./images/Icon.png" alt="" class="mx-auto">
                 <p class="text-[#171717] font-bold text-3xl mx-auto text-center">Oops!! Sorry, There is no<br>content here</p>
 
             </div>
 
+        
+            <div id="card-container" class="container mx-auto grid grid-cols-1 lg:grid-cols-3 gap-4 pl-5 pr-5 lg:pl-0 lg:pr-0">
+                <!-- <div class="card card-compact w-full bg-base-100 shadow-xl">
+                    <figure class="overflow-hidden h-72">
+                        <img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" />
+                        <h6 class="absolute bottom-[40%] right-12">0 hr</h6>
+                    </figure>
+                    <div class="card-body">
+                      <div class="flex space-x-4 justify-start items-start">
+                            <div>
+                                <img src="" alt="" class="w-12 h-12 rounded-full">
+                            </div>
+                            <div>
+                                <h2 class="card-title">Laugh at My pain</h2>
+                                <div class="flex mt-3 gap-3">
+                                  <span class="">Author Name</span>
+                                  <img src="./images/right.png" alt="" class="w-5 h-5">
+                                </div>
+                                <p class="mt-3">100k Views</p>
+                            </div>
+                      </div>
+                    </div>
+                </div> -->
+            </div>
         </section>
     </main>
 
