--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
                           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
                         </div>
                         <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-                          <li><button id="sort-btn" onclick="handleSort()">Sort by view</button></li>
+                          <li><button class="sort-btn" onclick="handleSort()" class="bg-slate-500">Sort by view</button></li>
                         </ul>
                       </div>
                       <a class="btn btn-ghost text-xl"><img src="./images/Logo.png" alt=""></a>
                     </div>
                     <div class="navbar-center hidden lg:flex">
                       <ul class="menu menu-horizontal px-1">
-                        <li><button onclick="handleSort()" id="sort-btn btn pl-8 pr-8 hover:bg-[#FF1F3D]">Sort by view</button></li>
+                        <li><button onclick="handleSort()" class="sort-btn btn pl-8 pr-8 bg-state-500 hover:bg-[#FF1F3D]">Sort by view</button></li>
                       </ul>
                     </div>
                     <div class="navbar-end">
