Header section edit

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                           <li><button class="sort-btn" onclick="handleSort()" class="bg-slate-500">Sort by view</button></li>
                         </ul>
                       </div>
-                      <a class="btn btn-ghost text-xl"><img src="./images/Logo.png" alt=""></a>
+                      <a class="btn btn-ghost"><img src="./images/Logo.png" alt="" class="w-28 lg:w-full"></a>
                     </div>
                     <div class="navbar-center hidden lg:flex">
                       <ul class="menu menu-horizontal px-1">
@@ -34,7 +34,7 @@
                       </ul>
                     </div>
                     <div class="navbar-end">
-                      <a class="btn bg-[#FF1F3D] pl-4 pr-4 lg:pl-8 lg:pr-8 text-lg font-medium">Blog</a>
+                      <a class="btn bg-[#FF1F3D] p-3 lg:pl-8 lg:pr-8 text-xs lg:text-lg font-medium">Blog</a>
                     </div>
                   </div>
             </div>
@@ -45,7 +45,7 @@
         
 
         <section class="flex justify-center items-center">
-            <div id="btn-container" class="mt-12 space-x-4">
+            <div id="btn-container" class="mt-12 space-x-1 lg:space-x-4 md:space-x-2">
 
             </div>
         </section>
