Error section edited

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <section class="mt-12">
             <div id="error-element" class="mt-24 hidden"> 
                 <img src="./images/Icon.png" alt="" class="mx-auto">
-                <p class="text-[#171717] font-bold text-3xl mx-auto text-center">Oops!! Sorry, There is no<br>content here</p>
+                <p class="text-[#171717] font-bold text-xl md:text-3xl lg:text-3xl mx-auto text-center">Oops!! Sorry, There is no<br>content here</p>
             </div>
 
         
